--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <button id="add-btn">Add Item</button>
 
   <script>
-    const apiURL = 'http://localhost:3000/api/items';
+    const apiURL = '/api/items'; // same origin
 
     // Load items
     async function loadItems() {
